--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^7.2.1",
     "@react-three/fiber": "^7.0.21",
     "@use-gesture/react": "latest",
+    "gsap": "^3.8.0",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
