--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@react-spring/core": "^9.2.4",
     "@react-spring/three": "^9.2.4",
-    "@react-three/drei": "^7.2.1",
+    "@react-three/drei": "^7.26.1",
     "@react-three/fiber": "^7.0.21",
     "@use-gesture/react": "latest",
     "gsap": "^3.8.0",
@@ -22,6 +22,7 @@
     "styled-components": "^5.3.3",
     "three": "^0.135.0",
     "three-stdlib": "^2.5.4",
+    "use-constant": "^1.1.0",
     "use-error-boundary": "^2.0.6",
     "zustand": "^3.5.7"
   },
