--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
   "dependencies": {
     "@react-spring/core": "^9.2.4",
     "@react-spring/three": "^9.2.4",
-    "@react-three/drei": "^7.26.1",
-    "@react-three/fiber": "^7.0.21",
+    "@react-three/drei": "^8.0.0",
+    "@react-three/fiber": "^8.0.0-beta-04",
     "@use-gesture/react": "latest",
     "gsap": "^3.8.0",
     "lodash-es": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "18.0.0-rc.0",
+    "react-dom": "18.0.0-rc.0",
+    "three": "0.135.0",
     "react-merge-refs": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.3",
-    "three": "^0.135.0",
     "three-stdlib": "^2.5.4",
     "use-constant": "^1.1.0",
     "use-error-boundary": "^2.0.6",
     "zustand": "^3.5.7"
   },
   "devDependencies": {
-    "@types/react": "^17.0.14",
+    "@types/react": "^",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
-    "@types/three": "^0.134.0",
+    "@types/three": "^0.135.0",
     "@vitejs/plugin-react-refresh": "^1.3.5",
     "prettier": "^2.5.0",
     "typescript": "^4.3.5",
