--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@react-three/fiber": "^8.0.0-beta-04",
     "@use-gesture/react": "latest",
     "gsap": "^3.8.0",
+    "leva": "^0.9.18",
     "lodash-es": "^4.17.21",
     "react": "18.0.0-rc.0",
     "react-dom": "18.0.0-rc.0",
-    "three": "0.135.0",
     "react-merge-refs": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.3",
+    "three": "0.135.0",
     "three-stdlib": "^2.5.4",
     "use-constant": "^1.1.0",
     "use-error-boundary": "^2.0.6",
